--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ethers": "^5.7.2",
+    "fhevmjs": "^0.4.0-3",
     "lucide-react": "^0.397.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
